--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidEmulatorHunter" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AndroidEmulatorHunter" parent="Theme.AppCompat.NoActionBar">
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/statusBar</item>
         <!-- Customize your theme here. -->
